--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ matrix:
 
 sudo: false
 
+env:
+  matrix:
+    - TEST=tests/test_notebooks.py
+    - TEST=tests/test_appendix_notebooks.py
+
 before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - chmod +x miniconda.sh
@@ -22,4 +27,4 @@ install:
   - pip install -r requirements_dev.txt
 
 script:
-  - travis_wait 40 nosetests tests -v -s
+  - travis_wait 40 nosetests $TEST -v -s
